--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,10 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
     <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
+    <script src="https://code.createjs.com/easeljs-0.8.0.min.js"></script>
+    <script src="https://code.createjs.com/tweenjs-0.6.0.min.js"></script>
+    <script src="https://code.createjs.com/preloadjs-0.6.0.min.js"></script>
+    <script src="https://code.createjs.com/soundjs-0.6.0.min.js"></script></head>
     <script src="js/app.js"></script>
     <script src="js/ticket/ticketModel.js"></script>
     <script src="js/ticket/ticketControllers.js"></script>
@@ -19,29 +23,38 @@
     <script src="js/model/numberCell.js"></script>
     <script src="js/model/prize.js"></script>
     <script src="js/model/totalPrize.js"></script>
+    <script src="js/model/numbersCanvas.js"></script>
 </head>
-<body ng-controller="TicketCtrl">
-    <div id="content">
+<body ng-controller="TicketCtrl"
+      ng-init="preloadAssets();">
+    <div id="loadPanel"
+         ng-show="!isTicketVisible()">
+         </div>
+    <div id="content"
+         ng-show="isTicketVisible()">
         <div id="info">
-            <div id="numbers">
-                <table>
-                    <th colspan="10">Numbers</th>
-                    <tr ng-repeat="row in numbers.getTable()">
-                        <td ng-repeat="number in row track by $index"
-                            ng-class="{'show': number.getShow()}">
-                            {{number.getNumber()}}
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div id="nextNumber">
-                <div class="ball">
-                    <span class="ballNumber"
-                          ng-class="{'hidden': !isNextNumberAvailable()}">
-                        {{nextNumber}}
-                    </span>
-                </div>
-            </div>
+        <canvas id="numbersCanvas" width="620" height="272">
+            alternate content
+        </canvas>
+            <!--<div id="numbers">-->
+                <!--<table>-->
+                    <!--<th colspan="10">Numbers</th>-->
+                    <!--<tr ng-repeat="row in numbers.getTable()">-->
+                        <!--<td ng-repeat="number in row track by $index"-->
+                            <!--ng-class="{'show': number.getShow()}">-->
+                            <!--{{number.getNumber()}}-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                <!--</table>-->
+            <!--</div>-->
+            <!--<div id="nextNumber">-->
+                <!--<div class="ball">-->
+                    <!--<span class="ballNumber"-->
+                          <!--ng-class="{'hidden': !isNextNumberAvailable()}">-->
+                        <!--{{nextNumber}}-->
+                    <!--</span>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
         <div id="remainingBalls">
             <table>
